--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,8 @@
   <meta name="apple-mobile-web-app-title" content="my_profile">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>my_profile</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <title>Portfolio | Puja V R</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
